fix(header): login/signup btn

--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -125,3 +125,10 @@
     }
   }
 }
+@media screen and (max-width: 600px) {
+  .mainHeader {
+    .right{
+      padding-bottom: 15px;
+    }
+  }
+}
