--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -19,7 +19,7 @@
   }
   .phone {
     float: left;
-    padding-left: 20px;
+    padding-left: 25px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -117,11 +117,33 @@
       ct-search {
         .search_form {
           padding: 0 15px;
-          .item{
+          .item {
             // margin: 10px;
           }
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .mainHeader {
+    .left {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1 1 100%;
+      flex: 1 1 100%;
+      max-width: 100%;
+      max-height: 100%;
+      box-sizing: border-box;
+    }
+    .right {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1 1 100%;
+      flex: 1 1 100%;
+      max-width: 100%;
+      max-height: 100%;
+      box-sizing: border-box;
+      padding-bottom: 15px;
     }
   }
 }
