--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -2,7 +2,6 @@
 .mainHeader {
   background-color: #fff;
   width: 100%;
-  // height: 75px;
   font-weight: 700;
   position: relative;
   justify-content: space-between;
@@ -11,7 +10,6 @@
     align-items: center;
   }
   img {
-    // margin-top: 25px;
     width: 100px;
     height: 50px;
     padding-left: 20px;
@@ -128,22 +126,24 @@
 
 @media screen and (max-width: 410px) {
   .mainHeader {
+    .phone{
+      display: none;
+    }
     .left {
       -webkit-box-flex: 1;
-      -webkit-flex: 1 1 100%;
-      flex: 1 1 100%;
-      max-width: 100%;
+      -webkit-flex: 1 1 40%;
+      flex: 1 1 40%;
+      max-width: 40%;
       max-height: 100%;
       box-sizing: border-box;
     }
     .right {
       -webkit-box-flex: 1;
-      -webkit-flex: 1 1 100%;
-      flex: 1 1 100%;
-      max-width: 100%;
+      -webkit-flex: 1 1 60%;
+      flex: 1 1 60%;
+      max-width: 60%;
       max-height: 100%;
       box-sizing: border-box;
-      padding-bottom: 15px;
     }
   }
 }
