--- a/src/app/pages/checkout/tpl.html
+++ b/src/app/pages/checkout/tpl.html
@@ -53,76 +53,78 @@
             <md-radio-group ng-model="$ctrl.paymentMode">
               <div class="pan_item">
                 <div class="left">
-                  <md-radio-button value="sodexo coupon" >SODEXO COUPON</md-radio-button>
+                  <md-radio-button value="sodexo coupon">SODEXO COUPON</md-radio-button>
                   <md-radio-button value="cash on delivery">CASH ON DELIVERY</md-radio-button>
                 </div>
               </div>
             </md-radio-group>
           </div>
           <div class="pan">
-            <div class="title">
-              <h4>Delivery Address</h4>
-            </div>
-                  <div class="locality-dlg">
-                    <div class="space_before">
-                    </div>
-                    <md-input-container>
-                      <label>UNIT/FLAT/WING/FLOOR NUMBER</label>
-                      <input ng-model="$ctrl.delivery_address.unitNumber" name="unitNumber" required>
-                      <div ng-messages="localityForm.unitNumber.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
-                      </div>
-                    </md-input-container>
-                    <md-input-container>
-                      <label>UNIT/BUILDING NAME</label>
-                      <input ng-model="$ctrl.delivery_address.unitName" name="unitName" required>
-                      <div ng-messages="localityForm.unitName.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
-                      </div>
-                    </md-input-container>
-                    <md-input-container>
-                      <label>STREET NAME</label>
-                      <input ng-model="$ctrl.delivery_address.streetName" name="streetName" >
-                      <div ng-messages="localityForm.streetName.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
-                      </div>
-                    </md-input-container>
-                    <md-input-container>
-                      <label>LANDMARK</label>
-                      <input ng-model="$ctrl.delivery_address.landmark" name="landmark" >
-                      <div ng-messages="localityForm.landmark.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
-                      </div>
-                    </md-input-container>
-                    <md-input-container>
-                      <label>SUBLOCALITY</label>
-                      <input ng-model="$ctrl.delivery_address.subLocality" name="subLocality" required ng-disabled="true">
-                      <div ng-messages="localityForm.subLocality.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div-->
-                      </div>
-                    </md-input-container>
-                    <md-input-container>
-                      <label>LOCALITY</label>
-                      <input ng-model="$ctrl.delivery_address.locality" name="locality" required ng-disabled="true">
-                      <div ng-messages="localityForm.delivery_address.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
-                      </div>
-                    </md-input-container>
-                    <md-input-container>
-                      <label>CITY</label>
-                      <input ng-model="$ctrl.delivery_address.city" name="city" required ng-disabled="true">
-                      <div ng-messages="localityForm.city.$error">
-                        <div ng-message="required">This is required.</div>
-                        <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
-                      </div>
-                    </md-input-container>
+            <form ng-cloak name="localityForm">
+              <div class="title">
+                <h4>Delivery Address</h4>
+              </div>
+              <div class="locality-dlg">
+                <div class="space_before">
+                </div>
+                <md-input-container>
+                  <label>UNIT/FLAT/WING/FLOOR NUMBER</label>
+                  <input ng-model="$ctrl.delivery_address.unitNumber" name="unitNumber" required>
+                  <div ng-messages="localityForm.unitNumber.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
                   </div>
+                </md-input-container>
+                <md-input-container>
+                  <label>UNIT/BUILDING NAME</label>
+                  <input ng-model="$ctrl.delivery_address.unitName" name="unitName" required>
+                  <div ng-messages="localityForm.unitName.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
+                  </div>
+                </md-input-container>
+                <md-input-container>
+                  <label>STREET NAME</label>
+                  <input ng-model="$ctrl.delivery_address.streetName" name="streetName">
+                  <div ng-messages="localityForm.streetName.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
+                  </div>
+                </md-input-container>
+                <md-input-container>
+                  <label>LANDMARK</label>
+                  <input ng-model="$ctrl.delivery_address.landmark" name="landmark">
+                  <div ng-messages="localityForm.landmark.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
+                  </div>
+                </md-input-container>
+                <md-input-container>
+                  <label>SUBLOCALITY</label>
+                  <input ng-model="$ctrl.delivery_address.subLocality" name="subLocality" required ng-disabled="true">
+                  <div ng-messages="localityForm.subLocality.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div-->
+                  </div>
+                </md-input-container>
+                <md-input-container>
+                  <label>LOCALITY</label>
+                  <input ng-model="$ctrl.delivery_address.locality" name="locality" required ng-disabled="true">
+                  <div ng-messages="localityForm.delivery_address.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
+                  </div>
+                </md-input-container>
+                <md-input-container>
+                  <label>CITY</label>
+                  <input ng-model="$ctrl.delivery_address.city" name="city" required ng-disabled="true">
+                  <div ng-messages="localityForm.city.$error">
+                    <div ng-message="required">This is required.</div>
+                    <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
+                  </div>
+                </md-input-container>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -154,7 +156,7 @@
                 <h4>$<span>{{$ctrl.getTotalAmount() - $ctrl.objDiscount.discount_amount}}<span>.00</span></span></h4>
               </div>
               <div class="button">
-                <button class="btn btn-default" ng-click="$ctrl.placeOrder()" ng-disabled="$ctrl.items.length == 0 || $ctrl.delivery_addresses.length == 0">Place Order <i class="material-icons">arrow_forward</i></button>
+                <button class="btn btn-default" ng-click="$ctrl.placeOrder()" ng-disabled="$ctrl.items.length == 0 || localityForm.$invalid">Place Order <i class="material-icons">arrow_forward</i></button>
               </div>
             </div>
           </div>
